[package]
name = "udp-over-tcp"
version = "0.1.0"
authors = ["Mullvad VPN"]
description = "Tunnel UDP traffic inside a TCP stream. Each datagram is prefixed with a 16 bit unsigned integer containing the length"
edition = "2018"
publish = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
err-context = "0.1.0"
log = "0.4.11"
env_logger = "0.8"
futures = "0.3.5"
structopt = "0.3.16"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.20"
