[package]
name = "udp-over-tcp"
version = "0.2.0"
authors = ["Mullvad VPN"]
license = "MIT OR Apache-2.0"
description = "Tunnel UDP traffic inside a TCP stream. Each datagram is prefixed with a 16 bit unsigned integer containing the length"
repository = "https://github.com/mullvad/udp-over-tcp"
edition = "2021"
publish = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
err-context = "0.1.0"
log = "0.4.11"
futures = "0.3.5"
structopt = "0.3.16"
lazy_static = "1.4.0"

# Only used by the binaries in src/bin/ and is optional so it's not
# pulled in when built as a library.
env_logger = { version = "0.9", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.23.1"
