[package]
name = "udp-over-tcp"
version = "0.4.0"
authors = ["Mullvad VPN"]
license = "MIT OR Apache-2.0"
description = "Tunnel UDP traffic inside a TCP stream. Each datagram is prefixed with a 16 bit unsigned integer containing the length"
repository = "https://github.com/mullvad/udp-over-tcp"
edition = "2021"
rust-version = "1.80.0"
publish = false

[[bin]]
name = "tcp2udp"
required-features = ["clap"]

[[bin]]
name = "udp2tcp"
required-features = ["clap"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
# Enable this feature to make it possible to have tcp2udp report metrics over statsd
statsd = ["cadence"]

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
err-context = "0.1.0"
log = "0.4.11"
futures = "0.3.25"
clap = { version = "4.0", features = ["derive"], optional = true }
lazy_static = "1.4.0"

# Only used by the binaries in src/bin/ and is optional so it's not
# pulled in when built as a library.
env_logger = { version = "0.11.3", optional = true }
cadence = { version = "1.0.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27.1", features = ["socket"] }
